Fix for bug 88500. GetChildList should return prefs relative to the root branch. r=mscott, sr=alecf.